# bp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: test.json
src/lib/bp_decoder/: bp_decoder.cpp  bp_decoder.hpp
src/lib/sparse_matrix/: sparse_matrix.cpp  sparse_matrix.hpp
src/sim/: sim.cpp
